chore: down grade java and spring version